Wed Dec 16 00:39:27 2015  Jake Worth  <jakeworth82@gmail.com>

	* doc/extension.rdoc: [DOC] fix double-word typo.  [Fix GH-1153]

Wed Dec 16 00:25:41 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* lib/webrick/utils.rb (WEBrick::Utils::TimeoutHandler#initialize):
	  TimeoutMutex should be acquired when accessing @timeout_info.
	  To avoid deadlock, interrupt() calls are delayed.
	  Due to the mutex, it is safe to treat ary without ary.dup.
	  [Bug #11742] [ruby-dev:49387]

Tue Dec 15 23:13:10 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* gc.c: Delete excess semicolon after RUBY_ALIAS_FUNCTION().
	  Suppress "syntax error:  empty declaration" warnings by
	  Oracle Solaris Studio 12.x on Solaris. [Bug #11821]

	* hash.c: ditto, after NOINSERT_UPDATE_CALLBACK().

Tue Dec 15 18:04:04 2015  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* NEWS: added news about EBCDIC encoding

Tue Dec 15 17:57:57 2015  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/ebcdic.h, enc/trans/ebcdic.trans,
	  test/ruby/test_transcode.rb: Fixed encoding name
	  to the correct one in the IANA registry (IBM037)
	  and added an alias (ebcdic-cp-us)

Tue Dec 15 16:19:26 2015  Takashi Kokubun  <takashikkbn@gmail.com>

	* lib/erb.rb: Render erb with array buffer for function call optimization.
	  [fix GH-1143]
	* lib/rdoc/erb_partial.rb: ditto.
	* template/verconf.h.tmpl: ditto.

Tue Dec 15 13:50:05 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_oct): [DOC] mention radix indicators.
	  [ruby-core:71310] [Bug #11648]

Tue Dec 15 12:20:30 2015  Takashi Kokubun  <takashikkbn@gmail.com>

	* lib/erb.rb: Simplify regexp to optimize erb scanner.
	  [fix GH-1144]

Tue Dec 15 11:56:24 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/uri/common.rb: make code block for rdoc.
	  [ci skip][fix GH-1152] Patch by @Tonkpils

Tue Dec 15 11:55:08 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/zlib/zlib.c: fix a typo.
	  [ci skip][fix GH-1149] Patch by @crismali
